--- a/Data_Bricks_Use_cases/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
+++ b/Data_Bricks_Use_cases/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
@@ -773,6 +773,64 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "aba0e5e6-8f63-4c0e-9e7d-cfdd4bdec4eb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#dbutils.notebook Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "24ebc728-4dd6-4e03-9252-678e938c8d2e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.notebook.help()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d0810dba-6f6c-41ad-80f7-dd457b138a71",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.notebook.run(\"/Users/sunilasha625@gmail.com/DataBricksCodeRepo/Data_Bricks_Use_cases/WIP Usecase1/1_Usecase_Explore_Notebooks_magic_commands\",60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "9653cfd7-aec1-410a-8085-3f48781713f2",
      "showTitle": false,
      "tableResultSettingsMap": {},
