Data type link added

--- a/sql-spark-etl/2_Spark_DataFrame_Read_Write_Operations/Spark_sql_read_extract_Basics.ipynb
+++ b/sql-spark-etl/2_Spark_DataFrame_Read_Write_Operations/Spark_sql_read_extract_Basics.ipynb
@@ -653,6 +653,25 @@
     "csv_df1=spark.read.csv(path=[\"dbfs:///Volumes/catalog2/database2/volume2/created_folder/delimiter_sample.txt\",\"dbfs:///Volumes/catalog2/database2/volume2/created_folder/cust_1.txt\"],inferSchema=True,header=True,sep=',')\n",
     "print(csv_df1.count())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "24ff7e77-4363-4a0f-ba2d-06f69a9ded4a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Provide schema with SQL String or programatically (very very important)\n",
+    "\n",
+    "[PySpark SQL Datatypes](https://spark.apache.org/docs/latest/sql-ref-datatypes.html) <br>\n",
+    "[Data Types](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/data_types.html)"
+   ]
   }
  ],
  "metadata": {
