--- a/Data_Bricks_Use_cases/WIP Usecase3/Read_Write_UseCase.ipynb
+++ b/Data_Bricks_Use_cases/WIP Usecase3/Read_Write_UseCase.ipynb
@@ -1136,6 +1136,58 @@
     "- Since \"abc\" cannot be cast to an integer, Spark cannot safely choose INT.\n",
     "- Spark falls back to STRING for the entire column."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "73f00b03-91f7-47f0-aa94-a4e28ec09396",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "To provide schema (columname & datatype), what are the 2 basic options available that we learned so far ? inferSchema/toDF<br>\n",
+    "We are going to learn additionally 2 more options to handle schema (colname & datatype)?<br>\n",
+    "1. Using simple string format of define schema.<br>\n",
+    "IMPORTANT: 2. Using structure type to define schema.<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a9c91747-6274-46c5-b2a2-61d40ba97f4d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#By default it will use _c0,_c1..._cn it will apply as column headers, if we use toDF(colnames) we can define our own headers.\n",
+    "csv_df1=spark.read.csv(\"dbfs:///Volumes/catalog2/database2/volume2/created_folder/cust_1.txt\").toDF(\"id\",\"fname\",\"lname\",\"age\",\"prof\")\n",
+    "print(csv_df1.printSchema())\n",
+    "csv_df1.show()\n",
+    "csv_df2=spark.read.csv(\"dbfs:///Volumes/catalog2/database2/volume2/created_folder/cust_1.txt\",inferSchema='True').toDF(\"id\",\"fname\",\"lname\",\"age\",\"prof\")\n",
+    "print(csv_df2.printSchema())\n",
+    "#1. Using simple string format of define custom simple schema.\n",
+    "str_struct=\"id integer,fname string,lname string,age integer,prof string\"\n",
+    "csv_df3=spark.read.schema(str_struct).csv(\"/Volumes/catalog2/database2/volume2/created_folder/custs_header\")\n",
+    "print(csv_df3.printSchema())\n",
+    "\n",
+    "from pyspark.sql.types import StructType,StructField,IntegerType,StringType\n",
+    "#2. Using StructType and StructField to define custom schema.\n",
+    "schema=StructType([StructField(\"id\",IntegerType(),True),StructField(\"fname\",StringType(),True),StructField(\"lname\",StringType(),True),StructField(\"age\",IntegerType(),True),StructField(\"prof\",StringType(),True)])\n",
+    "csv_df4=spark.read.schema(schema).csv(\"/Volumes/catalog2/database2/volume2/created_folder/custs_header\")\n",
+    "print(csv_df4.printSchema())\n"
+   ]
   }
  ],
  "metadata": {
