--- a/Data_Bricks_Use_cases/WIP Usecase3/Read_Write_UseCase.ipynb
+++ b/Data_Bricks_Use_cases/WIP Usecase3/Read_Write_UseCase.ipynb
@@ -1177,6 +1177,7 @@
     "csv_df1.show()\n",
     "csv_df2=spark.read.csv(\"dbfs:///Volumes/catalog2/database2/volume2/created_folder/cust_1.txt\",inferSchema='True').toDF(\"id\",\"fname\",\"lname\",\"age\",\"prof\")\n",
     "print(csv_df2.printSchema())\n",
+    "\n",
     "#1. Using simple string format of define custom simple schema.\n",
     "str_struct=\"id integer,fname string,lname string,age integer,prof string\"\n",
     "csv_df3=spark.read.schema(str_struct).csv(\"/Volumes/catalog2/database2/volume2/created_folder/custs_header\")\n",
@@ -1187,6 +1188,181 @@
     "schema=StructType([StructField(\"id\",IntegerType(),True),StructField(\"fname\",StringType(),True),StructField(\"lname\",StringType(),True),StructField(\"age\",IntegerType(),True),StructField(\"prof\",StringType(),True)])\n",
     "csv_df4=spark.read.schema(schema).csv(\"/Volumes/catalog2/database2/volume2/created_folder/custs_header\")\n",
     "print(csv_df4.printSchema())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "988e6be0-1631-49f3-a272-ab9a92383599",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##5. Column Renaming Usecases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "75e117c8-5e8f-4bd6-9af6-445f35afd522",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "1. Apply column names using string using<br> toDF function for customer data<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d6f33cf6-24b8-4d2f-b4ee-173cab6137e6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1=spark.read.options(header='True',inferSchema='True',sep=',').csv(\"/Volumes/catalog2/database2/volume2/created_folder/custs_header\").toDF(\"ID\",\"FirstName\",\"LastName\",\"Age\",\"Prof\")\n",
+    "print(df1.printSchema())\n",
+    "df1.show(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e55b66a6-1115-4ea5-94f8-d8588e9958c2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "2. Apply column names and datatype using the schema function for usage data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "008f5c56-6a25-44d9-bc26-2c147dce49b0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "schema_fun=\"ID integer,FirstName string,LastName string,Age integer,Prof string\"\n",
+    "df1=spark.read.schema(schema_fun).options(header='True',inferSchema='True',sep=',').csv(\"/Volumes/catalog2/database2/volume2/created_folder/custs_header\")\n",
+    "print(df1.printSchema())\n",
+    "df1.show(20)   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2ea1d135-e6bc-4817-bfd7-c7bafaec1aa7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "3. Apply column names and datatype using the StructType with IntegerType, StringType, TimestampType and other classes for towers data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "beb7ba16-9aff-4384-996e-6fcc16b8be6a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
+    "schema=StructType([StructField(\"ID\",IntegerType(),True),StructField(\"FirstName\",StringType(),True),StructField(\"LastName\",StringType(),True),StructField(\"Age\",IntegerType(),True),StructField(\"Prof\",StringType(),True)])\n",
+    "df1=spark.read.schema(schema).csv(\"/Volumes/catalog2/database2/volume2/created_folder/custs_header\")\n",
+    "print(df1.printSchema())\n",
+    "df1.show(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bfb12247-1997-4088-b4e4-1281432b0ab8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "We will use format to read the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4d8b0ed1-6550-4151-bab0-9e85bcbc5566",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1=spark.read.format(\"csv\").options(header=\"True\",inferSchema=\"True\",sep=',').load(\"/Volumes/catalog2/database2/volume2/created_folder/patients.csv\")\n",
+    "print(df1.printSchema())\n",
+    "df1.display()"
    ]
   }
  ],
