--- a/sql-spark-etl/2_Spark_DataFrame_Read_Write_Operations/Basic_Write_ops.ipynb
+++ b/sql-spark-etl/2_Spark_DataFrame_Read_Write_Operations/Basic_Write_ops.ipynb
@@ -354,52 +354,8 @@
    "outputs": [],
    "source": [
     "#ingest_df1 i am writing into path\n",
-    "ingest_df1.write.json(path=\"/Volumes/workspace/wd36schema/ingestion_volume/target/jsonout\",mode='append')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "3c8d80b0-d697-4f41-a2d4-65a900488264",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df1=spark.read.json(\"/Volumes/catalog2/database2/volume2/created_folder/Key_based/copy/copy.json\")\n",
-    "df1.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5de546ab-db42-40d3-ae57-97b698d0140a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#df1 data i am writing into json_copy direct\n",
-    "df1.write.mode(\"overwrite\").json(\"/Volumes/catalog2/database2/volume2/created_folder/Key_based/copy/json_copy/\")\n",
-    "df1.display()"
+    "ingest_df1.write.json(path=\"/Volumes/catalog2/database2/volume2/created_folder/jsonoutput\",mode='append')\n",
+    "df1=spark.read.json(\"/Volumes/catalog2/database2/volume2/created_folder/jsonoutput\").show(2)"
    ]
   },
   {
@@ -420,7 +376,8 @@
    },
    "outputs": [],
    "source": [
-    "df2=spark.read.json(\"/Volumes/catalog2/database2/volume2/created_folder/Key_based/key_based.json\")"
+    "df1=spark.read.json(\"/Volumes/catalog2/database2/volume2/Write_bascics/json/Orginal/\")\n",
+    "df1.display()"
    ]
   },
   {
@@ -441,9 +398,9 @@
    },
    "outputs": [],
    "source": [
-    "# def2 data I am writing it into json_copy\n",
-    "df2.write.mode(\"append\").json(\"/Volumes/catalog2/database2/volume2/created_folder/Key_based/copy/json_copy/\")\n",
-    "df2.display()"
+    "# def1 data I am writing it into json_copy\n",
+    "df1.write.mode(\"overwrite\").json(\"/Volumes/catalog2/database2/volume2/Write_bascics/json/Orginal/writing/\")\n",
+    "df1.display()"
    ]
   },
   {
@@ -456,7 +413,50 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "16fd9a99-b9fc-4f97-b5df-c13ef5903166",
+     "nuid": "0a85d238-4d35-4618-9a5e-90b87152e489",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df3=spark.read.json(\"/Volumes/catalog2/database2/volume2/Write_bascics/json/Orginal/key_based.json\")\n",
+    "df3.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6ba21bce-9d97-41d0-bb9c-b1636bf0ab24",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df3.write.mode(\"append\").json(\"/Volumes/catalog2/database2/volume2/Write_bascics/json/Orginal/writing/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fd617061-b39d-44c8-9b84-422325fdeb6b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -469,7 +469,7 @@
     "#in df2 the order is \n",
     "#{\"profession\":\"Doctor\",\"age\":40,\"lname\":\"Smith\",\"fname\":\"Jane\",\"custid\":2}\n",
     "#schema id different means order of the column is different abut still it woorked\n",
-    "spark.read.json(\"/Volumes/catalog2/database2/volume2/created_folder/Key_based/copy/json_copy/\").show()"
+    "spark.read.json(\"/Volumes/catalog2/database2/volume2/Write_bascics/json/Orginal/writing/\").show()"
    ]
   },
   {
@@ -885,13 +885,388 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "4228d636-de76-42d2-9cf2-73e577e45c72",
+     "nuid": "127a48cf-6a03-4ed5-b7ad-a2d639cea565",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "source": []
+   "source": [
+    "####4.Table Load Operations - Building LAKEHOUSE ON TOP OF DATALAKE\n",
+    "Can we do SQL operations directly on the tables like a database or datawarehouse? or Can we build a Lakehouse in Databricks?\n",
+    "- We learn/use a lot/heavily subsequently, \n",
+    "- what is Lakehouse - A SQL/Datawarehouse/Query layer on top of the Datalake is called Lakehouse\n",
+    "- We have different lakehouses which we are going to learn further - \n",
+    "1. delta tables (lakehouse) in databricks\n",
+    "2. hive in onprem\n",
+    "3. bigquery in GCP\n",
+    "4. synapse in azure\n",
+    "5. athena in aws\n",
+    "- **when to go with lakehouse** - \n",
+    "- a. Transformation\n",
+    "- b. Analysis/Analytics\n",
+    "- c. AI/BI\n",
+    "- d. Literally we are going to learn SQL & Advanced SQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0f744a5a-a319-4dcd-acaf-d75939b25a90",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#We are building delta tables in databricks (we are building hive tables in onprem/we are building bq tables in gcp...)\n",
+    "#saveastable (named notation/named arguments)\n",
+    "#Table\n",
+    "#cid,prof,age,fname,lname\n",
+    "#mapping\n",
+    "#cid,prof,age,fname,lname\n",
+    "ingest_df1.write.saveAsTable(\"catalog2.database2.cust_info\",mode='overwrite')\n",
+    "display(spark.sql(\"show create table catalog2.database2.cust_info\"))\n",
+    "display(spark.sql(\"DESCRIBE EXTENDED catalog2.database2.cust_info\"))#Use when:You want schema + location + provider + table properties.\n",
+    "display(spark.sql(\"DESCRIBE TABLE catalog2.database2.cust_info\"))#. Get table schema only (columns & data types)\n",
+    "spark.table(\"catalog2.database2.cust_info\").printSchema()#Understanding column structure\n",
+    "display(\n",
+    "    spark.sql(\"\"\"\n",
+    "        DESCRIBE HISTORY catalog2.database2.cust_info\n",
+    "    \"\"\")\n",
+    ")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e965fe50-9e9b-49b1-943f-4636139c838e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#1. insertinto function can be used as like saveAstable with few differences\n",
+    "#a. it works only if the target table exist\n",
+    "#b. it works by creating insert statements in the behind(not bulk load), hence it is slow, hence we have use for small dataset (safely only if table exists)\n",
+    "#c. it will load the data from the dataframe by using position, not by using name..\n",
+    "#insertInto (positional notation/positional arguments)\n",
+    "#Table\n",
+    "#cid,prof,age,fname,lname\n",
+    "#mapping.\n",
+    "#cid,fname,lname,age,prof\n",
+    "ingest_df1.write.insertInto(\"catalog2.database2.cust_info\",overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ea7b1b19-ca63-43fb-bf2a-e0faf9f43954",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ingest_df1.write.format(\"delta\").save(\"location\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b94cd427-3270-47b3-b67b-9a52e9339bee",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "##I am using spark engine to pull the data from the lakehouse table backed by dbfs (s3) (datalake) where data in delta format(deltalake) \n",
+    "display(spark.sql(\"select * from catalog2.database2.cust_info\"))#sparkengine+lakehouse+datalake(deltalake)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7112ed04-e6d5-475c-a304-0eac20378ca4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Understanding Spark Engine, Lakehouse, Data Lake, and Delta Lake\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. The Code You Are Running\n",
+    "\n",
+    "```python\n",
+    "display(\n",
+    "    spark.sql(\"\"\"\n",
+    "        SELECT *\n",
+    "        FROM workspace.wd36schema.lh_custtbl\n",
+    "    \"\"\")\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "This line **looks simple**, but behind it there are **multiple architectural layers** working together.\n",
+    "\n",
+    "You are **not directly reading files**. You are querying a **logical table**, and Spark takes care of the rest.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. High-Level Architecture (One Line)\n",
+    "\n",
+    "> **Spark Engine** executes a SQL query on a **Lakehouse table**, whose data is stored in a **Data Lake (S3 via DBFS)** using **Delta Lake format**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. Spark Engine (Compute Layer)\n",
+    "\n",
+    "### What Spark Engine Is\n",
+    "\n",
+    "Spark is the **compute engine** responsible for:\n",
+    "\n",
+    "* Parsing SQL\n",
+    "* Validating syntax\n",
+    "* Creating a logical plan\n",
+    "* Optimizing the query\n",
+    "* Executing distributed jobs\n",
+    "* Returning results\n",
+    "\n",
+    "Spark **does not store data**.\n",
+    "\n",
+    "> Spark’s job is to *process* data, not *own* it.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. Lakehouse Table (Logical Abstraction)\n",
+    "\n",
+    "```text\n",
+    "workspace.wd36schema.lh_custtbl\n",
+    "```\n",
+    "\n",
+    "This is a **logical table**, not a file.\n",
+    "\n",
+    "### What the Lakehouse Table Contains (Metadata)\n",
+    "\n",
+    "* Table schema (columns, data types)\n",
+    "* Storage location\n",
+    "* File format (Delta)\n",
+    "* Partitioning information\n",
+    "* Table properties\n",
+    "* Access control rules\n",
+    "\n",
+    "This metadata is stored in:\n",
+    "\n",
+    "* Hive Metastore **or**\n",
+    "* Unity Catalog (modern Databricks setup)\n",
+    "\n",
+    "> Lakehouse = Data Lake storage + Warehouse-style tables\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5. Data Lake (Physical Storage Layer)\n",
+    "\n",
+    "The actual data lives in a **data lake**, backed by cloud object storage:\n",
+    "\n",
+    "* AWS S3\n",
+    "* Azure ADLS\n",
+    "* Google GCS\n",
+    "\n",
+    "In Databricks, this is exposed via **DBFS**.\n",
+    "\n",
+    "Example (conceptual):\n",
+    "\n",
+    "```text\n",
+    "s3://company-datalake/lakehouse/lh_custtbl/\n",
+    "```\n",
+    "\n",
+    "The data lake stores **files**, not tables.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 6. Delta Lake (Storage + Transaction Layer)\n",
+    "\n",
+    "The data in the data lake is stored in **Delta format**.\n",
+    "\n",
+    "### What Delta Lake Adds\n",
+    "\n",
+    "* ACID transactions\n",
+    "* Schema enforcement\n",
+    "* Schema evolution\n",
+    "* Time travel\n",
+    "* Data versioning\n",
+    "\n",
+    "### Physical Structure\n",
+    "\n",
+    "```text\n",
+    "lh_custtbl/\n",
+    " ├── _delta_log/\n",
+    " │    ├── 000000000.json\n",
+    " │    ├── 000000001.json\n",
+    " ├── part-00000.snappy.parquet\n",
+    " ├── part-00001.snappy.parquet\n",
+    "```\n",
+    "\n",
+    "Spark reads `_delta_log` first to determine:\n",
+    "\n",
+    "* Latest table version\n",
+    "* Valid parquet files\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 7. What “Lakehouse” Means (Important)\n",
+    "\n",
+    "**Lakehouse is not a separate tool.**\n",
+    "\n",
+    "It is an **architecture pattern**:\n",
+    "\n",
+    "| Feature                | Provided By               |\n",
+    "| ---------------------- | ------------------------- |\n",
+    "| Cheap scalable storage | Data Lake (S3)            |\n",
+    "| Table abstraction      | Metastore / Unity Catalog |\n",
+    "| ACID guarantees        | Delta Lake                |\n",
+    "| SQL processing         | Spark Engine              |\n",
+    "\n",
+    "Together, this is called a **Lakehouse**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "\n",
+    "```text\n",
+    "Spark Engine (Compute)\n",
+    "        ↓\n",
+    "Lakehouse Table (Metadata)\n",
+    "        ↓\n",
+    "Delta Lake (Transaction Layer)\n",
+    "        ↓\n",
+    "Data Lake (S3 via DBFS)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 11. One-Line Interview-Ready Explanation\n",
+    "\n",
+    "> \"Spark uses lakehouse table metadata to locate Delta Lake files stored in the data lake, reads the Delta transaction log for consistency, and executes the query using distributed processing.\"\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 12. Key Takeaway\n",
+    "\n",
+    "* You query a **table**\n",
+    "* Spark reads **files**\n",
+    "* Delta Lake ensures **correctness**\n",
+    "* Data Lake provides **scalable storage**\n",
+    "\n",
+    "Everything works together under the **Lakehouse architecture**.\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b1b07b56-aca4-4d14-94e0-74bd911eb744",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "%md\n",
+    "####5. XML Format - Semi structured data format (most of the json features can be applied in xml also, but in DE world not so famous like json)\n",
+    "- Used rarely on demand (by certain target/source systems eg. mainframes)\n",
+    "- Can be related with json, but not so much efficient like json\n",
+    "- Databricks provides xml as a inbuild function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "21db0d82-b09a-40b6-ac49-b9d5db94ded0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "%md\n",
+    "### Modes in Writing\n",
+    "1. **Append** - Adds the new data to the existing data. It does not overwrite anything.\n",
+    "2. **Overwrite** - Replaces the existing data entirely at the destination.\n",
+    "3. **ErrorIfexist**(default) - Throws an error if data already exists at the destination.\n",
+    "4. **Ignore** - Skips the write operation if data already exists at the destination."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c5ce42c7-36d1-415b-a2d9-958cfcf8c26e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "%md\n",
+    "####What are all the overall functions/options we used in this notebook, for learning fundamental spark dataframe WRITE operations in different formats and targets?\n",
+    "1. We learned dozen of functions (out of 18 functions) in the write module with minimum options...\n",
+    "2. Functions we learned are (Datalake functions - csv/json/xml/orc/parquet+delta), (Lakehouse functions - saveAsTable/insertInto), (additional options - format/save/option/options/mode).\n",
+    "3. We have few more performance optimization/advanced options available (jdbc (we learn this soon in the name of foreign catalog), partitionBy,ClusterBy,BucketBy,SortBy,text)\n",
+    "4. Few of the important read options under csv such as header, sep, mode(append/overwrite/error/ignore), toDF.\n",
+    "5. Few additional options such as compression, different file formats..."
+   ]
   }
  ],
  "metadata": {
