Commit Final CASE3 changes

--- a/Data_Bricks_Use_cases/WIP Usecase3/Read_Write_UseCase.ipynb
+++ b/Data_Bricks_Use_cases/WIP Usecase3/Read_Write_UseCase.ipynb
@@ -3523,25 +3523,40 @@
     "### 1. CSV (Comma-Separated Values)\n",
     "**When to use / Benefits:**\n",
     "Data is organized in rows and column<br>  \n",
-    "Use CSV for small datasets, quick data sharing, and human-readable files. It is simple, lightweight, and supported by almost every tool, but it has no schema or metadata.\n",
+    "When to use<br>\n",
+    "- Small files<br>\n",
+    "- Learning, testing, or debugging<br>\n",
+    "\n",
+    "Benefits<br>\n",
+    "- Very easy to read<br>\n",
+    "- Opens in Excel<br>\n",
+    "- Almost no overhead<br>\n",
     "\n",
     "---\n",
     "\n",
     "### 2. JSON (JavaScript Object Notation)\n",
     "**When to use / Benefits:**  \n",
-    "Use JSON when data is semi-structured or hierarchical (nested). It is flexible, self-describing, and commonly used for APIs and data exchange, but it is verbose and slow for analytics.\n",
+    "Use JSON when data is semi-structured or hierarchical (nested). It is flexible, self-describing, and commonly used for APIs and data exchange.<br>\n",
+    "- Data coming from APIs<br>\n",
+    "- Web applications<br>\n",
+    "- Data has nested information (object inside object)<br>\n",
     "\n",
     "---\n",
     "\n",
     "### 3. ORC (Optimized Row Columnar)\n",
     "**When to use / Benefits:**  \n",
-    "Use ORC for large analytical workloads, especially in Hive-based ecosystems. It provides high compression, column-level storage, and fast query performance due to built-in statistics.\n",
+    "- High compression<br>\n",
+    "- Fast reads<br>\n",
+    "- Stores column statistics<br>\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
     "### 4. Parquet\n",
     "**When to use / Benefits:**  \n",
-    "Use Parquet for big data analytics and Spark workloads. It is a columnar format with efficient compression and predicate pushdown, making it ideal for reading only required columns at scale.\n",
+    "- Column-based (reads only required columns)<br>\n",
+    "- Good compression<br>\n",
+    "- Very fast for analytics<br>\n",
     "\n",
     "---\n",
     "\n",
@@ -3559,7 +3574,9 @@
     "\n",
     "### 7. Delta Tables\n",
     "**When to use / Benefits:**  \n",
-    "Use Delta tables for production-grade lakehouse systems. They provide transactional consistency, schema evolution, scalable reads/writes, and support incremental pipelines and data quality enforcement.\n"
+    "- ACID transactions<br>\n",
+    "- Schema enforcement<br>\n",
+    "- Handles large-scale data safely<br>\n"
    ]
   }
  ],
