ACTIVE DATA munging-Day1

--- a/Data_Bricks_Use_cases/WIP Usecase1/1_Usecase_Explore_Notebooks_magic_commands.ipynb
+++ b/Data_Bricks_Use_cases/WIP Usecase1/1_Usecase_Explore_Notebooks_magic_commands.ipynb
@@ -309,7 +309,7 @@
    },
    "outputs": [],
    "source": [
-    "df1.write.saveAsTable(\"mobile_os_usage\")"
+    "df1.write.saveAsTable(\"mobile_os_usage1\")"
    ]
   },
   {
