--- a/SparkDataFrame_Read_and_write/2_Spark_DataFrame_Read_Write_Operations/Basic_Write_ops.ipynb
+++ b/SparkDataFrame_Read_and_write/2_Spark_DataFrame_Read_Write_Operations/Basic_Write_ops.ipynb
@@ -61,7 +61,7 @@
     "- **Format**: Plain text, tabular (rows & columns), 2D table  \n",
     "- **Schema**: Header row defines column names; order matters  \n",
     "- **Limitations**:  \n",
-    "  - No native schema migration  \n",
+    "  - No native schema migration :CSV files do not support automatic schema evolution or schema enforcement.<br> \n",
     "  - Position-based, no metadata or versioning  \n",
     "  - Cannot handle column renames, reordering, or type changes automatically  \n",
     "- **Use Case**: Structured data with fixed schema  \n",
@@ -274,7 +274,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b78c33fe-58a5-4426-bc40-dedd7281eb15",
      "showTitle": false,
@@ -476,7 +479,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "77389e0b-b43e-457a-80ef-399d3a30aa4a",
      "showTitle": false,
@@ -525,7 +531,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8320c4f1-ca3a-46fe-9de1-f6ee824dcfbd",
      "showTitle": false,
@@ -593,7 +602,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "230bfc18-9fa4-442b-bae0-65f7f31b9166",
      "showTitle": false,
@@ -883,7 +895,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "127a48cf-6a03-4ed5-b7ad-a2d639cea565",
      "showTitle": false,
@@ -938,11 +953,6 @@
     "display(spark.sql(\"DESCRIBE EXTENDED catalog2.database2.cust_info\"))#Use when:You want schema + location + provider + table properties.\n",
     "display(spark.sql(\"DESCRIBE TABLE catalog2.database2.cust_info\"))#. Get table schema only (columns & data types)\n",
     "spark.table(\"catalog2.database2.cust_info\").printSchema()#Understanding column structure\n",
-    "display(\n",
-    "    spark.sql(\"\"\"\n",
-    "        DESCRIBE HISTORY catalog2.database2.cust_info\n",
-    "    \"\"\")\n",
-    ")\n",
     "\n",
     "\n"
    ]
